Missing #pragma once in WasmOpcodeOrigin.h https://bugs.webkit.org/show_bug.cgi?id=190699

Patch by Takafumi Kubota <takafumi.kubota1012@sslab.ics.keio.ac.jp> on 2018-10-18
Reviewed by Yusuke Suzuki.

This patch add ''#pragma once'' into WasmOpcodeOrigin.h to avoid the
multiple inclusion that can happen in the unified build
configuration.

* wasm/WasmOpcodeOrigin.h:

Canonical link: https://commits.webkit.org/205617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237249 268f45cc-cd09-0410-ab3c-d52691b4dbfc