Source/JavaScriptCore/wasm/WasmOpcodeOrigin.h
@@ -23,6 +23,8 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+#pragma once
+
 #if ENABLE(WEBASSEMBLY)
 
 #include "B3Origin.h"
